tests/snapshots/render_snapshots__hud_paused.snap
---
source: tests/render_snapshots.rs
expression: snapshot
---
┌Stats─────────────┐
│SCORE             │
│        0         │
│                  │
│LEVEL             │
│ ┌──────────────┐ │
└─│              │─┘
┌N│    PAUSED    │─┐
│N└──────────────┘ │
│ O O              │
│ J J              │
│ Z Z              │
│ L L              │
│ I I              │
└──────────────────┘
