tests/snapshots/render_snapshots__hud_with_score.snap
---
source: tests/render_snapshots.rs
expression: buf_to_string(&terminal)
---
┌Stats─────────────┐
│SCORE             │
│  100 000         │
│                  │
│LEVEL             │
│  5               │
└──────────────────┘
┌Next──────────────┐
│NEXT              │
│ L L              │
│ S S              │
│ T T              │
│ O O              │
│ J J              │
└──────────────────┘
