tests/snapshots/render_snapshots__line_clear_flash_frame.snap
---
source: tests/render_snapshots.rs
expression: buf_to_string(&terminal)
---
                      
                      
                      
                      
                      
                      
                      
                      
                      
                      
                      
                      
                      
                      
                      
                      
                      
      [][]            
        [][]
